--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <script src = "./lib/phaser.js"></script>
+    <script src = "./src/prefab/Projectile.js"></script>
     <script src = "./src/prefab/Rocket.js"></script>
     <script src = "./src/prefab/Spaceship.js"></script>
     <script src = "./src/prefab/Alienship.js"></script>
