--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/prefab/Projectile.js"></script>
     <script src = "./src/prefab/Rocket.js"></script>
+    <script src = "./src/prefab/ComboBar.js"></script>
     <script src = "./src/prefab/Spaceship.js"></script>
     <script src = "./src/prefab/Alienship.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
