--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <script src = "./src/prefab/ComboBar.js"></script>
     <script src = "./src/prefab/Spaceship.js"></script>
     <script src = "./src/prefab/Alienship.js"></script>
+    <script src = "./src/prefab/Thought.js"></script>
+    <script src = "./src/prefab/CollisionHandler.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/scenes/ControlsMenu.js"></script>
